Fix embedded legend wrapping

--- a/static/css/embed.css
+++ b/static/css/embed.css
@@ -20,6 +20,18 @@
   width: 10px;
   height: 10px;
 }
+.legend-item {
+  margin-left: 10px;
+  margin-right: 10px;
+  white-space: nowrap;
+  display: inline-block;
+}
+.legend-color {
+  margin-right: 2px;
+}
+.legend-text {
+  margin-left: 2px;
+}
 code {
   color: black;
 }
